clear input fields of the add Card modal upon submit, fix modal size of add card and edit profile on mobile

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -129,6 +129,10 @@
     width: 26px;
     height: 26px;
   }
+  .modal_opened {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
   .edit-modal__container {
     width: 282px;
     padding: 25px 22px;
